# rustman

./: Cargo.toml
.kiro/specs/sidescrolling-adventure-game/: design.md  requirements.md  tasks.md
examples/: checkpoint_demo.rs
src/: components.rs  enums.rs  level.rs  lib.rs  main.rs
src/plugins/: ability.rs  animation.rs  camera.rs  checkpoint.rs  level.rs  mod.rs  physics.rs  player.rs  swing.rs
